--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
-    <script src="script.js"></script>
 </head>
 <body>
     <header class="header">
@@ -30,6 +28,20 @@
         <div class="content">
             <button class="btn btn-primary" id="button">Кликни меня</button>
             <div id="click">0</div>
+
+            <hr>
+
+            <div id="calculator" style="display: flex; flex-direction: row; justify-content: center; align-items: center;">
+                <input style="width: 15%" type="number" class="form-control">
+                + 
+                <input style="width: 15%" type="number" class="form-control">
+                + 
+                <input style="width: 15%" type="number" class="form-control">
+                + 
+                <input style="width: 15%" type="number" class="form-control">
+                = 
+                <input id="result" style="width: 15%" class="form-control" type="text" disabled>
+            </div>
 
             <hr>
             <div class="alert alert-success" role="alert" style="visibility: hidden; opacity: 0;">
@@ -59,5 +71,6 @@
         counter.innerHTML = number;
     }
     </script>
+    <script src="script.js"></script>
 </body>
 </html>
