--- a/index.html
+++ b/index.html
@@ -33,16 +33,19 @@
 
             <div id="calculator" style="display: flex; flex-direction: row; justify-content: center; align-items: center;">
                 <input style="width: 15%" type="number" class="form-control">
-                + 
-                <input style="width: 15%" type="number" class="form-control">
-                + 
-                <input style="width: 15%" type="number" class="form-control">
-                + 
+                +
                 <input style="width: 15%" type="number" class="form-control">
                 = 
                 <input id="result" style="width: 15%" class="form-control" type="text" disabled>
             </div>
 
+            <div id="calculator2" style="display: flex; flex-direction: row; justify-content: center; align-items: center;">
+                <input style="width: 15%" type="number" class="form-control">
+                -
+                <input style="width: 15%" type="number" class="form-control">
+                = 
+                <input id="result2" style="width: 15%" class="form-control" type="text" disabled>
+            </div>
             <hr>
             <div class="alert alert-success" role="alert" style="visibility: hidden; opacity: 0;">
                 People was added!
