--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
             <hr>
 
-            <div id="calculator" style="display: flex; flex-direction: row; justify-content: center; align-items: center;">
+           <div id="calculator" style="display: flex; flex-direction: row; justify-content: center; align-items: center;">
                 <input style="width: 15%" type="number" class="form-control">
                 +
                 <input style="width: 15%" type="number" class="form-control">
@@ -42,6 +42,22 @@
             <div id="calculator2" style="display: flex; flex-direction: row; justify-content: center; align-items: center;">
                 <input style="width: 15%" type="number" class="form-control">
                 -
+                <input style="width: 15%" type="number" class="form-control">
+                = 
+                <input style="width: 15%" class="form-control result" type="text" disabled>
+            </div> 
+
+            <div id="calculator3" style="display: flex; flex-direction: row; justify-content: center; align-items: center;">
+                <input style="width: 15%" type="number" class="form-control">
+                /
+                <input style="width: 15%" type="number" class="form-control">
+                = 
+                <input style="width: 15%" class="form-control result" type="text" disabled>
+            </div>
+
+            <div id="calculator4" style="display: flex; flex-direction: row; justify-content: center; align-items: center;">
+                <input style="width: 15%" type="number" class="form-control">
+                *
                 <input style="width: 15%" type="number" class="form-control">
                 = 
                 <input style="width: 15%" class="form-control result" type="text" disabled>
