Calculator added builder method

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header class="header">
@@ -31,37 +31,11 @@
 
             <hr>
 
-           <div id="calculator" style="display: flex; flex-direction: row; justify-content: center; align-items: center;">
-                <input style="width: 15%" type="number" class="form-control">
-                +
-                <input style="width: 15%" type="number" class="form-control">
-                = 
-                <input style="width: 15%" class="form-control result" type="text" disabled>
-            </div>
-
-            <div id="calculator2" style="display: flex; flex-direction: row; justify-content: center; align-items: center;">
-                <input style="width: 15%" type="number" class="form-control">
-                -
-                <input style="width: 15%" type="number" class="form-control">
-                = 
-                <input style="width: 15%" class="form-control result" type="text" disabled>
-            </div> 
-
-            <div id="calculator3" style="display: flex; flex-direction: row; justify-content: center; align-items: center;">
-                <input style="width: 15%" type="number" class="form-control">
-                /
-                <input style="width: 15%" type="number" class="form-control">
-                = 
-                <input style="width: 15%" class="form-control result" type="text" disabled>
-            </div>
-
-            <div id="calculator4" style="display: flex; flex-direction: row; justify-content: center; align-items: center;">
-                <input style="width: 15%" type="number" class="form-control">
-                *
-                <input style="width: 15%" type="number" class="form-control">
-                = 
-                <input style="width: 15%" class="form-control result" type="text" disabled>
-            </div>
+            <div id="calculator"></div>
+            <div id="calculator2"></div>
+            <div id="calculator3"></div>
+            <div id="calculator4"></div>
+            
             <hr>
             <div class="alert alert-success" role="alert" style="visibility: hidden; opacity: 0;">
                 People was added!
